# hpc-oda-commons

./: .cursorrules  .gitattributes  .gitignore  .hpc_oda_hardware.env  .hpc_oda_hardware.yaml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.in  Makefile  NOTICE  PROJECT_PLAN.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  WHITEPAPER.md  hpc-oda  hpc-oda.toml  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  ruff.toml  scaffold_hpc_oda_commons.sh  tox.ini
.devcontainer/: Dockerfile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: adapter_request.yml  config.yml  feature_request.yml  model_request.yml  schema_evolution_request.yml
.github/workflows/: benchmark-smoke.yml  benchmark-smoke.yml.disabled  ci.yml  docs.yml  docs.yml.disabled  release.yml.disabled
containers/: Dockerfile  README.md  apptainer.def
datasets/: README.md
docs/: FAISS_EVAL.md  agent-usage.md  architecture.md  hpc-oda-commons-reference.md  hpc_operational_datasets.xlsx  index.md  known-issues.md  mkdocs.yml
docs/benchmarking/: hpc-runner.md  methodology.md
docs/concepts/: artifacts.md  benchmarks.md  pillars.md  schema.md  security-data-handling.md  v0_1_charter.md
docs/datasets/: alcf-djc-ingest.md  curation-status.md  external-datasets.md  runtime-first-investigation.md
docs/decisions/: 0001-python-version.md  0002-cli-framework.md  0003-schema-validation.md  0004-storage-format.md  0005-project-config.md  README.md
docs/design/: public-dataset-ingestion.md
docs/how-to/: add-adapter.md  add-model.md  add-recipe.md  contribute.md  corporate-tls.md  embedding-knn.md  ingest-jobs-parquet.md  ingest-slurmctld.md  install.md  interpret-results.md  quickstart.md
docs/reference/: cli.md  python-api.md  recipes.md  schema-versions.md
examples/: README.md
examples/notebooks/: 00_quickstart.ipynb  01_slurmctld_ingest.ipynb  02_benchmark_compare.ipynb
hpc-oda-commons/: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md
hpc-oda-commons/.devcontainer/: devcontainer.json
leaderboard/: README.md  generate.py
leaderboard/templates/: index.html.j2  style.css
recipes/: .gitignore  README.md
recipes/common/: metrics_mdl_examples.yml
recipes/job-failure/: alt_model_example.yml  baseline_tiny.yml
recipes/job-runtime/: alt_model_example.yml  baseline_medium.yml  baseline_tiny.yml  xgb_hourly_recent.yml
registry/: README.md  snapshot.json  snapshot.sig
schemas/: README.md
scripts/: build_registry_snapshot.py  detect_hardware_and_write.py  dev_bootstrap.sh  golden_path_local.sh  release_checklist.md  run_faiss_eval.py  sync_packaged_recipes.py  validate_recipes.py  validate_schemas.py
src/hpc_oda_commons/: __init__.py  __main__.py  version.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: expected_job_table.parquet  expected_manifest.json
tests/integration/: test_benchmark_embedding_knn.py  test_benchmark_smoke.py  test_cli_golden_path.py  test_dataset_dod5.py  test_embed_pipeline.py  test_leaderboard_generation.py  test_slurmctld_ingest.py
(+355 files in other folders)
